<resources>
    <string name="app_name">PocketBank</string>
    <string name="Register">Register</string>
    <string name="loginText">Have An Account?Log in.</string>
    <string name="brandingText">Made In India With. </string>
    <string name="welcomeTxt">Welcome.</string>
    <string name="name">Name*</string>
    <string name="password">Password</string>
    <string name="passwordRequired">Password*</string>
    <string name="smallPassword">password</string>
    <string name="Email">Email</string>
    <string name="emailRequired">Email*</string>
    <string name="Address">Address</string>
    <string name="loveImage">loveImage</string>
    <string name="invalidPassword">Please enter a password</string>
    <string name="invalidEmail">Please enter a email address</string>
    <string name="usedEmail">Email Already Registered,Please Login or Try With Another Email.</string>
    <string name="registrationSuccessful">Successfully Registered.</string>
    <string name="registrationUnSuccessful">Registration Failed,Please Try After Some Time.</string>
    <string name="userCredential">userCredential</string>
    <string name="loggedInUser">loggedInUser</string>
    <string name="loginImage">loginImage</string>
    <string name="login">Login</string>
    <string name="Continue">Continue</string>
    <string name="loginSuccessful">Login Successful</string>
    <string name="wrongEmailPasswordCombo">Wrong Password And Email Combo.</string>
    <string name="registerText">Join now</string>
    <string name="notRegisteredEmail">This Email Is Not Registered.</string>
    <string name="notRegisteredPassword">This Password Is Not Registered.</string>
    <string name="stats">Stats</string>
    <string name="Trans">Transactions</string>
    <string name="home">Home</string>
    <string name="loan">Loans</string>
    <string name="Investment">Invests</string>
    <string name="pocketBankWelcome">Welcome To Pocket Bank</string>
    <string name="shopping">Shopping</string>
    <string name="shoppingImage">shoppingImage</string>
    <string name="sendReceive">Send/Receive</string>
    <string name="dismiss">Dismiss</string>
    <string name="amount">+ 1500</string>
    <string name="Amount">Amount</string>
    <string name="description">Description</string>
    <string name="currentDate">Current Date</string>
    <string name="sender">sender</string>
    <string name="transactionId">transactionId</string>
    <string name="shoppingChart">Shopping Chart</string>
    <string name="shareImage">Share Image</string>
    <string name="rupees">%.1f Rs</string>
    <string name="moneySpent">Money Spent</string>
    <string name="recordExpenditure">Highest Single Day Record</string>
    <string name="information">Information</string>
    <string name="logOut">SignOut</string>
    <string name="inviteFriends">Invite-Someone</string>
    <string name="chooseAnything">Choose Anything</string>
    <string name="indianFlagImage">Image Of Indian Flag</string>
    <string name="sendingText">Check My New Application Here..</string>
    <string name="noAppFound">No Application Found To Complete The Action..</string>
    <string name="addShopping">Add Shopping</string>
    <string name="pickItem">Pick Item</string>
    <string name="enterDate">Enter Date</string>
    <string name="selectDate">Select Date</string>
    <string name="store">Store</string>
    <string name="add">Add</string>
    <string name="itemImage">Item Image</string>
    <string name="itemName">Item</string>
    <string name="itemPrice">Price</string>
    <string name="changeItem">Change Item</string>
    <string name="selectShoppingDate">Select Shopping Date</string>
    <string name="dateDialog">Date Dialog</string>
    <string name="yourPhoto">Your Photo</string>
    <string name="yourEmailAddress">emailAddress</string>
    <string name="yourFullName">Full Name</string>
    <string name="floatingActionButton">Tells The Action To Perform</string>
    <string name="logoutMessage">Are You Sure You Want To Log Out ?.</string>
    <string name="yes">Yes</string>
    <string name="appVersion">App Version 1.0</string>
    <string name="craftMessage">Craft With</string>
    <string name="in">In</string>
    <string name="profilePhoto">Profile Photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="delete">Remove Photo</string>
    <string name="blankImage">blank</string>
    <string name="notBlank">notBlank</string>
    <string name="no">No</string>
    <string name="removeProfilePhoto">Remove profile photo?</string>
    <string name="photoRemoved">Photo Removed</string>
    <string name="profilePhotoUpdated">Profile Photo Updated</string>
    <string name="required">*Required</string>
    <string name="loginToYourAccount">Sign in</string>
    <string name="loginHelp">Having trouble logging in ? </string>
    <string name="getHelp">Forgot Credentials?</string>
    <string name="accountRecovery">Account Recovery</string>
    <string name="problemFacing">Let us know what issue you\'re facing?</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="forgotEmail">I forgot my email</string>
    <string name="forgotAllDetails">I forgot my all details</string>
    <string name="getPassword">Get password</string>
    <string name="giveYourDetails">Enter your email or mobile number and we\'ll send you the details.</string>
    <string name="enterEmailOrPhoneNumber">Email or Mobile Number*</string>
    <string name="send">Send</string>
    <string name="details">details</string>
    <string name="extraInformation">extraInfo</string>
    <string name="get">Get</string>
    <string name="enterValidEmailOrPhone">Invalid mobile number or email address</string>
    <string name="thisIsYour">"This is your "</string>
    <string name="emptyName">Please enter your name</string>
    <string name="onCreate">onCreate() called</string>
    <string name="atLeastUpperCase">Please enter at least one upper case letter</string>
    <string name="atLeastLowerCase">Please enter at least one lower case letter</string>
    <string name="atLeastOneDigit">Please enter at least one digit</string>
    <string name="atLeastOneSpecialCharacter">Please enter at least one special character</string>
    <string name="atLeastEightCharacterLong">Please enter at least 8 characters</string>
    <string name="eightOrMoreCharacters">8 or more characters</string>
    <string name="or">or</string>
    <string name="signInWithGoogle">Sign in with Google</string>
    <string name="continueWithGoogle">Continue with Google</string>
    <string name="joinPocketBank">Join PocketBank</string>
    <string name="alternativeSignIn">or sign in</string>
    <string name="wrongEmail">Email address is not valid</string>
    <string name="removeWhiteSpace">Please remove white space</string>
    <string name="emptyString" />
    <string name="Join">Join</string>
    <string name="incorrectEmail">Hmm, that\'s not the right email.Please try again or use Forgot Credentials.</string>
    <string name="incorrectPassword">Hmm, that\'s not the right password.Please try again or use Forgot Credentials.</string>
    <string name="incorrectLoginDetails">Hmm, that\'s not the right email and password combo.Please try again or use Forgot Credentials.</string>
    <string name="okay">Okay</string>
    <string name="invalidUser">User details does not exist.Please Join PocketBank.</string>
    <string name="notYou">Not you?</string>
    <string name="oneUserAllowed">We are allowing only one user per mobile,please login with your existing credential or uninstall the application to continue with your new credentials.</string>
    <string name="chooseTheItemYouShopped">Choose the item you shopped.</string>
    <string name="search">Search</string>
    <string name="petProducts">Pet Products</string>
    <string name="vegetables">Vegetables</string>
    <string name="fruits">Fruits</string>
    <string name="medicines">Medicines</string>
    <string name="fashion">Fashion</string>
    <string name="grooming">Grooming</string>
    <string name="books">Books</string>
    <string name="toys">Toys</string>
    <string name="cookingOil">Cooking Oil</string>
    <string name="milkProducts">Milk Products</string>
    <string name="meat">Meat</string>
    <string name="snacks">Snacks</string>
    <string name="ayurVedicProducts">Ayurveda</string>
    <string name="Groceries">Grocery</string>
    <string name="Appliances">Appliances</string>
    <string name="done">Done</string>
    <string name="jewellery">Jewellery</string>
    <string name="tools">Tools</string>
    <string name="fitness">Fitness</string>
    <string name="searchQuery">Search query</string>
    <string name="findItemYouHaveShopped">Find the item you shopped.</string>
    <string name="addItem">Add Item</string>
    <string name="pleaseSelectADate">Please Select A Date</string>
    <string name="pleaseEnterStoreInfo">Please enter store information</string>
    <string name="pleaseHaveADescription">Please have a description</string>
    <string name="pleaseEnterPrice">Please enter price</string>
    <string name="itemAdded">Item Added Successfully</string>
    <string name="dateFormat">Enter date in the form of YYYY-MM-DD.</string>
    <string name="loanImage">LoanImage</string>
    <string name="sendAndReceiveImage">Send And Receive Image</string>
    <string name="availableBalance">Available Balance :</string>
    <string name="positiveAmount">PositiveAmount</string>
    <string name="title_activity_launcher">launcher</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Transactions">Trans</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="investmentName">Investment Name</string>
    <string name="investmentNameColon">Investment Name:</string>
    <string name="initialAmount">Initial Amount</string>
    <string name="monthlyROI">Monthly ROI:</string>
    <string name="initialDate">Initial Date</string>
    <string name="finishDate">Finish Date:</string>
    <string name="addInvestment">Add Investment</string>
    <string name="investmentFragment">InvestmentFragment</string>
    <string name="backArrow">backArrow</string>
    <string name="navigationDrawer">navigationDrawer</string>
    <string name="percentageSymbol">%</string>
    <string name="pressBackAgain">Please click BACK again to exit</string>
    <string name="investmentNameError">please enter the investment name</string>
    <string name="initialAmountError">please enter initial amount.</string>
    <string name="monthlyROIError">please enter monthly ROI.</string>
    <string name="initialDateError">"please enter initial  date "</string>
    <string name="finishDateError">please enter finish date.</string>
    <string name="selectInitialDate">Select Initial Date</string>
    <string name="selectFinalDate">Select Finish Date</string>
    <string name="investment">Investment</string>
    <string name="investmentAddedSuccessfully">Investment Added Successfully</string>
    <string name="investmentProfit">Investment Profit</string>
    <string name="profit">Profit</string>
    <string name="receive">Receive</string>
    <string name="filters">Filters</string>
    <string name="all">All</string>
    <string name="loanPayment">Loan Payment</string>
    <string name="showTransactionMoreThan">Show Transaction More Than.</string>
    <string name="show">Show</string>
    <string name="nothingToShow">No Transactions To Show</string>
    <string name="enterAmount">Enter Amount Here</string>
</resources>