<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/statistics"
        android:title="@string/stats"
        android:icon="@drawable/ic_outline_trending_up_24"/>

    <item
        android:id="@+id/transactions"
        android:title="@string/Transactions"
        android:icon="@drawable/ic_outline_swap_vert_24"/>

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_outline_home_24"/>

    <item
        android:id="@+id/loan"
        android:title="@string/loan"
        android:icon="@drawable/ic_outline_event_available_24"/>

    <item
        android:id="@+id/investment"
        android:title="@string/Investment"
        android:icon="@drawable/ic_outline_currency_rupee_24"/>

</menu>