<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayoutRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/emailRequired"
        app:hintTextAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:hintTextColor="@color/steelGray"
        app:helperText="@string/emptyString"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmailRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayoutRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayoutRegistration"
        android:hint="@string/passwordRequired"
        app:endIconMode="password_toggle"
        app:helperText="@string/eightOrMoreCharacters"
        app:helperTextEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:hintTextColor="@color/steelGray"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPasswordRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:visibility="gone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/Continue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayoutRegistration"
        android:textSize="20sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/or"
        android:layout_width="60dp"
        android:layout_height="35dp"
        app:layout_constraintLeft_toLeftOf="@id/register"
        app:layout_constraintRight_toRightOf="@id/register"
        app:layout_constraintTop_toBottomOf="@id/register"
        android:text="@string/or"
        android:gravity="center"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/rightDivider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/or"
        app:layout_constraintTop_toTopOf="@id/or"
        app:layout_constraintBottom_toBottomOf="@id/or"
        app:dividerColor="@color/lightestGray"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/leftDivider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/or"
        app:layout_constraintTop_toTopOf="@id/or"
        app:layout_constraintBottom_toBottomOf="@id/or"
        app:dividerColor="@color/lightestGray"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleSignInButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or"
        style="?attr/materialButtonOutlinedStyle"
        android:text="@string/signInWithGoogle"
        android:textColor="#686868"
        android:textSize="20sp"
        app:icon="@drawable/ic_icons8_google_48"
        app:iconTint="@null"
        app:iconGravity="textStart"
        app:iconSize="25dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>