<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/header"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:background="@color/aubergine"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/yourPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.1"
        android:contentDescription="@string/yourPhoto"
        app:srcCompat="@drawable/blankprofile"
        app:shapeAppearanceOverlay="@style/rounderCorner"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:transitionName="profilePic"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/addPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_photo_camera_dark_blue"
        app:layout_constraintRight_toRightOf="@+id/yourPhoto"
        app:layout_constraintBottom_toBottomOf="@+id/yourPhoto"
        app:tint="@color/aubergine"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/yourPhoto"
        app:layout_constraintTop_toBottomOf="@id/yourPhoto"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textStyle="bold"
        android:text="@string/yourEmailAddress"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourFullName"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/fullName"
        app:layout_constraintTop_toBottomOf="@+id/fullName"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>